Fixed invisible slider arrow when buttons are dark with white text

--- a/web/css/layout/_pagebuilder.less
+++ b/web/css/layout/_pagebuilder.less
@@ -198,6 +198,7 @@
         transform: @slider-arrow__transform;
         --base-bg-alpha: .7;
         background-color: @slider-arrow__background-color;
+        color: @slider-arrow__color;
         .lib-css(border, @slider-arrow__border);
         display: none;
         gap: 0;
